Add and implement JoinCommandExecutor