@@ -4,6 +4,7 @@ import org.amateurs.model.Game;
 
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -11,6 +12,7 @@ import java.util.Map;
 
 public class InMemoryDatabase implements Database {
     final static Map<Long, List<Game>> sortedGamesForChatId = new HashMap<>();
+    final static Map<String, Game> allGames = new HashMap<>();
 
     private static final InMemoryDatabase inMemoryDatabase = new InMemoryDatabase();
 
@@ -34,11 +36,29 @@ public class InMemoryDatabase implements Database {
     }
 
     @Override
+    public List<String> getAllGameIds(Long chatId) {
+        List<Game> games = sortedGamesForChatId.getOrDefault(chatId, new ArrayList<>());
+        Collections.sort(games);
+        return games.stream().map(Game::getId).toList();
+    }
+
+    @Override
     public List<Game> addGame(Long chatId, Game newGame) {
         final List<Game> savedGames = sortedGamesForChatId.getOrDefault(chatId, new ArrayList<>());
         savedGames.add(newGame);
         sortedGamesForChatId.put(chatId, savedGames);
+        allGames.put(newGame.getId(), newGame);
         return savedGames;
+    }
+
+    @Override
+    public Game addPlayersToGame(String gameId, List<String> players) {
+        Game savedGame = allGames.get(gameId);
+        if (savedGame == null) {
+            return null;
+        }
+        savedGame.addPlayers(players);
+        return savedGame;
     }
 
     @Override
@@ -76,15 +96,19 @@ public class InMemoryDatabase implements Database {
     private static void populateWithDummyData() {
         final ZonedDateTime now = ZonedDateTime.now();
         final List<Game> dummyGames = new ArrayList<>();
+        final String dummyGameId = "someDummyGameId";
         final Game dummyGame = Game.builder()
+                .id(dummyGameId)
                 .date(now.toLocalDate().plusDays(3))
                 .startTime(now.toLocalTime().plusHours(1))
                 .endTime(now.toLocalTime().plusHours(3))
                 .location("CCK Sports Hall")
                 .courts(List.of("1"))
-                .players(List.of("Jojopup123"))
+                .players(new ArrayList<>(Arrays.asList("Jojopup123".split(","))))
+                .maxPlayers(6)
                 .build();
         dummyGames.add(dummyGame);
         sortedGamesForChatId.put(197040891L, dummyGames);
+        allGames.put(dummyGameId, dummyGame);
     }
 }
